@@ -96,6 +96,9 @@ int string_to_atrflagsets(dbref player, const char *p, privbits *setbits,
 const char *atrflag_to_string(privbits mask);
 void init_atr_name_tree(void);
 
+void attr_read_all(PENNFILE *f);
+void attr_write_all(PENNFILE *f);
+
 int can_read_attr_internal(dbref player, dbref obj, ATTR *attr);
 int can_write_attr_internal(dbref player, dbref obj, ATTR *attr, int safe);
 bool can_edit_attr(dbref player, dbref thing, const char *attrname);
