@@ -92,6 +92,7 @@ int get_list(PENNFILE *f, dbref i);
 void db_free(void);
 static void init_objdata_htab(int size, void (*free_data) (void *));
 static void db_write_flags(PENNFILE *f);
+static void db_write_attrs(PENNFILE *f);
 static dbref db_read_oldstyle(PENNFILE *f);
 
 StrTree object_names;       /**< String tree of object names */
@@ -720,12 +721,17 @@ db_write(PENNFILE *f, int flag)
   dbflag += DBF_LABELS;
   dbflag += DBF_SPIFFY_AF_ANSI;
   dbflag += DBF_HEAR_CONNECT;
+  dbflag += DBF_NEW_VERSIONS;
 
   penn_fprintf(f, "+V%d\n", dbflag * 256 + 2);
+
+  db_write_labeled_int(f, "dbversion", globals.new_indb_version);
 
   db_write_labeled_string(f, "savedtime", show_time(mudtime, 1));
 
   db_write_flags(f);
+
+  db_write_attrs(f);
 
   penn_fprintf(f, "~%d\n", db_top);
 
@@ -753,6 +759,12 @@ db_write_flags(PENNFILE *f)
   flag_write_all(f, "POWER");
 }
 
+static void
+db_write_attrs(PENNFILE *f)
+{
+  penn_fprintf(f, "+ATTRIBUTES LIST\n");
+  attr_write_all(f);
+}
 
 /** Write out an object, in paranoid fashion.
  * This function writes a single object out to a file in paranoid
@@ -1585,6 +1597,11 @@ db_read(PENNFILE *f)
   if (!(globals.indb_flags & DBF_LABELS))
     return db_read_oldstyle(f);
 
+  if ((globals.indb_flags & DBF_NEW_VERSIONS)) {
+    db_read_this_labeled_int(f, "dbversion", &i);
+    globals.new_indb_version = i;
+  }
+
   db_read_this_labeled_string(f, "savedtime", &tmp);
   strcpy(db_timestamp, tmp);
 
@@ -1600,6 +1617,9 @@ db_read(PENNFILE *f)
       } else if (c == 'P') {
         (void) getstring_noalloc(f);
         flag_read_all(f, "POWER");
+      } else if (c == 'A') {
+        (void) getstring_noalloc(f);
+        attr_read_all(f);
       } else {
         do_rawlog(LT_ERR, "Unrecognized database format!");
         return -1;
